--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -13,7 +13,7 @@ workflows:
     plan:
       steps:
       - run: cat /etc/os-release
-      - run echo $PLANFILE
+      - run: echo $PLANFILE
       - run: pwd
       - run: terraform init -no-color
       - run: terraform workspace select -no-color $WORKSPACE
