--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -17,3 +17,8 @@ workflows:
       - run: terraform init -no-color
       - run: terraform workspace select -no-color $WORKSPACE
       - run: terraform plan -no-color
+    apply:
+      steps:
+      - run: terraform init -no-color
+      - run: terraform workspace select -no-color $WORKSPACE
+      - run: terraform apply -no-color
